# Singular

./: .gitignore  configure.ac
Singular/: Makefile.in  configure  configure.in  gentable2.cc  grammar.cc  grammar.y  iparith.cc  mod2.h.in  table.h
Singular/LIB/: modstd.lib  reesclos.lib  standard.lib  teachstd.lib
Tst/Long/: cyclic-sba_l.res.gz.uu  cyclic-sba_l.stat  eco-sba_l.res.gz.uu  eco-sba_l.stat  katsura-sba_l.res.gz.uu  katsura-sba_l.stat  katsura-sba_l.tst
Tst/Short/: sba_s.res.gz.uu  sba_s.stat
doc/: reference.doc
kernel/: Makefile.am  kInline.cc  kspoly.cc  kstd1.cc  kstd1.h  kstd2.cc  kutil.cc  kutil.h  pDebug.cc  pInline1.h  pInline2.h  pShallowCopyDelete.cc  ring.cc  syz0.cc
kernel/GBEngine/: kstd2.cc  kutil.cc
kernel/f4/: Makefile.am  data.h  f4.c  gb.c  stat.c  stat.h  timer.c  timer.h
